<resources>
    <string name="app_name">opTarget</string>
    <string name="tv_parameters">Input</string>


    <string name="tv_txtTargetDri">Target DRI</string>

    <string name="tv_txtNatoTarget">Nato\nTarget</string>
    <string name="tv_txtHumanTarget">Human\nTarget</string>
    <string name="tv_txtObjTarget">Object\nTarget</string>

    <string name="tv_txtDet">Detection (m)</string>
    <string name="tv_txtRec">Recognition (m)</string>
    <string name="tv_txtIdent">Identify (m)</string>

    <string name="tv_resNatoDet"></string>
    <string name="tv_resNatoRec"></string>
    <string name="tv_resNatoIdent"></string>

    <string name="tv_resHumanDet"></string>
    <string name="tv_resHumanRec"></string>
    <string name="tv_resHumanIdent"></string>

    <string name="tv_resObjDet"></string>
    <string name="tv_resObjRec"></string>

    <string name="tv_natoSize"></string>
    <string name="tv_humanSize"></string>
    <string name="tv_objSize"></string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="tv_targetSize">Target Size</string>

    <string name="tv_txtNatoTargetSize">Nato Target</string>
    <string name="tv_txtHumanTargetSize">Human Target</string>
    <string name="tv_txtObjTargetSize">Object Target</string>


    <string name="et_natoTargetW">Width</string>
    <string name="et_natoTargetH">Height</string>
    <string name="tv_natoTargetSizeX">x</string>

    <string name="et_humanTargetW">Width</string>
    <string name="et_humanTargetH">Height</string>
    <string name="tv_humanTargetSizeX">x</string>

    <string name="et_objTargetW">Width</string>
    <string name="et_objTargetH">Height</string>
    <string name="tv_objTargetSizeX">x</string>


    <!--====================================-->

    <string name="btn_txtDimension">Target Size (px) Calculator</string>
    <string name="btn_txtTargetSize">Target Size</string>
    <string name="btn_txtFocalLength">Lens Focal Length Calculator</string>
    <string name="btn_txtFOV">Field of View Calculator</string>
    <string name="btn_txtDRI">DRI Calculator</string>
    <string name="btn_txtSettings">Settings</string>

    <string name="btn_txtCalc">Calculate</string>
    <string name="btn_txtSave">Save</string>
    <string name="btn_txtDef">Default</string>
    <string name="tv_txtDetectorSettings">Detector Settings (px):</string>

    <string name="tv_txtFocalLength">Focal Length (mm):</string>
    <string name="tv_txtSensorPitch">Detector Pitch (mic):</string>
    <string name="tv_txtDimension">Detector Size (px):</string>
    <string name="tv_txtDetectorSize">Detector Size</string>
    <string name="et_txtDimensionW">  W</string>
    <string name="et_txtDimensionH">  H</string>
    <string name="tv_x">x</string>
    <string name="tv_txtTargetSizePx">Target Size (px):</string>
    <string name="tv_txtFOV">Field of View (FOV):</string>

    <string name="tv_txtHfov">HFOV (deg) :</string>
    <string name="tv_txtIfov">IFOV (rad) :</string>
    <string name="tv_txtVfov">VFOV (deg) :</string>
    <string name="tv_resIfov"></string>
    <string name="tv_resHfov"></string>
    <string name="tv_resVfov"></string>


    <string name="tv_txtTargetRange">Target Distance (m):</string>
    <string name="tv_txtTargetSize">Target Size (m):</string>
    <string name="tv_resTargetSizeW"></string>
    <string name="tv_resTargetSizeH"></string>

    <string name="et_resTargetSizeW">W</string>
    <string name="et_resTargetSizeH">H</string>

    <string name="tv_resDimensionW"></string>
    <string name="tv_resDimensionH"></string>

    <string name="tv_txtLinePair">Line Pairs:</string>
    <string name="tv_txtLinePairDet">Detection</string>
    <string name="tv_txtLinePairDetObj">Detection (Obj.)</string>
    <string name="tv_txtLinePairRec">Recognition</string>
    <string name="tv_txtLinePairIdent">Identification</string>


    <string name="tv_txtTargetSizeNato">Nato Target</string>
    <string name="et_targetSizeNatoW">W</string>
    <string name="et_targetSizeNatoH">H</string>


    <string name="tv_txtTargetSizeHuman">Human Target</string>
    <string name="et_targetSizeHumanW">W</string>
    <string name="et_targetSizeHumanH">H</string>

    <string name="btn_TargetInput">Target Size Input</string>
    <string name="btn_FOVInput">Angle Input</string>
    <string name="tv_ChooseAction">Calculate Focal Length according to :</string>

    <string name="tv_txtTargetSizeObj">Object Target</string>
    <string name="et_targetSizeObjW">W</string>
    <string name="et_targetSizeObjH">H</string>
    <string name="tv_txtFocalLengthW">Focal Length Width (mm):</string>
    <string name="tv_txtFocalLengthH">Focal Length (mm):</string>
    <string name="et_txtTargetSizeW">W</string>
    <string name="et_txtTargetSizeH">H</string>

    <string name="tv_resTargetSizeX">x</string>


    <string name="tv_txtNatoDet">Detection (m):</string>
    <string name="tv_txtNatoRec">Recognition (m):</string>
    <string name="tv_txtNatoIdent">Identification (m):</string>

    <string name="tv_txtHumanDet">Detection (m):</string>
    <string name="tv_txtHumanRec">Recognition (m):</string>
    <string name="tv_txtHumanIdent">Identification (m):</string>


    <string name="tv_txtObjDet">Detection (m):</string>
    <string name="tv_txtObjRec">Recognition (m):</string>


</resources>
