<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/black"
        android:text="@string/btn_txtCalc"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/ll_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_input"
        app:layout_constraintVertical_bias="0.458" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/ll_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:paddingBottom="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/ll_focalLength"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/ll_sensorPitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">


            <ImageView
                android:id="@+id/img_focalLength"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_focal_length"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/tv_focalLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/tv_txtFocalLength"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_focalLength"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:paddingTop="25dp"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_sensorPitch"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/ll_targetRange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_focalLength"
            tools:ignore="MissingConstraints">


            <ImageView
                android:id="@+id/img_sensorPitch"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_sensor_pitch"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/tv_sensorPitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/tv_txtSensorPitch"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_sensorPitch"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:paddingTop="25dp"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="413dp"
        android:layout_height="476dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calc">

        <LinearLayout
            android:id="@+id/ll_nato_det"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/ll_nato_rec"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/img_nato_det"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_nato"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/tv_txtNatoDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/tv_txtNatoDet"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_resNatoDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/tv_resNatoDet"
                android:textSize="24sp" />

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nato_rec"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/ll_nato_ident"
            app:layout_constraintTop_toBottomOf="@+id/ll_nato_det"
            tools:ignore="MissingConstraints">


            <ImageView
                android:id="@+id/img_nato_rec"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_nato"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/tv_txtNatoRec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/tv_txtNatoRec"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_resNatoRec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/tv_resNatoRec"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nato_ident"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_nato_rec"
            tools:ignore="MissingConstraints">


            <ImageView
                android:id="@+id/img_nato_ident"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_nato"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/tv_txtNatoIdent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/tv_txtNatoIdent"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_resNatoIdent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/tv_resNatoIdent"
                android:textSize="24sp" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>